frontend/src/main/resources/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');
@import url('https://fonts.googleapis.com/css?family=Titillium+Web:500,700');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1 { font-size: 2.8em }
h2 { font-size: 2.2em }
h3 { font-size: 1.8em }
h4 { font-size: 1.4em }
h5 { font-size: 1em }
h6 { font-size: .6em }

p { font-size: 18px }

h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
}

p, small {
    color: #EEE;
}

small {
    font-weight: 400;
}

html, body {
    height: 100%;
    background-color: #383c4a;
}

body {
    color: #FFFFFF;
    font-family: "Open Sans", sans-serif;
    display: flex;
    display: -ms-flexbox;
    flex-direction: column;
    line-height: 1.2;
}

.header {
    background-color: #5294e2;
    padding: 4em 2em;
}

.console {
    padding: 2em;
    flex: 1 0 auto;
    height: 580px;
    max-height: 580px;
}

.console .title {
    display: flex;
    display: -ms-flexbox;
    align-items: center;
}

.console .title h2 {
    flex: 1 0 auto;
}

.btn {
    cursor: pointer;
    color: #FFF;
    text-decoration: none;
    font-size: 17px;
    background-color: #323642;
    padding: 6px 18px;
    outline: none;
}

.btn:not(.disabled):hover {
    opacity: .7;
}

.btn.disabled {
    cursor: default;
    opacity: .47;
}

.btn.danger {
    background-color: #ED4C67;
}

.console .title div a:not(:last-child) {
    margin-right: .5rem;
}

.console .output {
    background-color: #4b5162;
    border-radius: .5rem;
    height: 100%;
    margin-top: 1rem;
    padding: 1rem;
    overflow-y: auto;
}

.console .output::-webkit-scrollbar {
    width: 12px;
    border-radius: .5rem;
}

.console .output::-webkit-scrollbar-track {
    border-radius: .5rem;
    background-color: transparent;
}

.console .output::-webkit-scrollbar-thumb {
    border-radius: .5rem;
    background: rgba(0, 0, 0, .2);
}

.console .output p code {
    opacity: .7;
}

.console .writter {
    margin-top: 1rem;
    display: flex;
    transition: box-shadow 200ms linear;
}

.console .writter:hover {
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.console .writter .btn {
    height: 42px;
    background-color: rgb(64, 69, 82) !important;
}

.console .writter .btn:last-child {
    border-top-right-radius: .5rem;
    border-bottom-right-radius: .5rem;
}

.console .input {
    background-color: #4b5162;
    width: 100%;
    height: 42px;
    line-height: 42px;
    padding: 0 1rem;
    border-top-left-radius: .5rem;
    border-bottom-left-radius: .5rem;
    color: #FFF;
    font-size: 16px;
}

.console .input::placeholder {
    color: #FFF;
    opacity: .47;
}

.console .input:focus {
    outline: none;
}

.status {
    display: flex;
    display: -ms-flexbox;
    padding: 2rem;
    margin-top: 2rem;
}

.status div {
    flex: 1 0 auto;
    background-color: #4b5162;
    border-radius: .5rem;
    padding: 1rem;
}

.status div:not(:last-child) {
    margin-right: 1rem;
}

.status div h4 {
    font-size: 26px;
    text-align: center;
}

.status div svg {
    width: 26px;
    height: 26px;
    vertical-align: sub;
    margin-right: .5rem;
}

.status div progress[value] {
    margin-top: 2rem;
    height: 24px;
    width: 100%;
    -webkit-appearance: none;
}

.status div progress[value]::-webkit-progress-bar {
    border-radius: .5rem;
    background-color: #383c4a;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}

.status div progress[value]::-webkit-progress-value {
    border-radius: .5rem;
    background-color: #5294e2;
}

.main {
    display: flex;
    display: -ms-flexbox;
    flex-wrap: wrap;
    flex-direction: row;
    height: 100%;
}

.main .content {
    height: 100%;
    flex: 1 0 auto;
    max-width: 92%;
    left: 8%;
    position: relative;
}

.main .top {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 120px;
    padding: 2rem;
    background-color: rgba(0, 0, 0, .1);
}

.main .top h4 {
    font-weight: 500;
    font-family: "Titillium Web", sans-serif;
    font-size: 2.2em;
}

.main .top p { margin-top: .2rem }

.main .top p span:not(:last-child) { margin-right: 1rem }

.main .top svg {
    vertical-align: middle;
    margin-right: 5px;
}

.floating-menu {
    position: fixed;
    left: 0;
    height: 100%;
    width: 8%;
    background-color: #404552;
    /* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
}

.floating-menu .klogo {
    text-shadow: 1px 1px 1px;
    height: 120px;
    line-height: 120px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 5em;
    font-family: 'Titillium Web', sans-serif;
    background-color: #2d98da;
}

.floating-menu .klogo span {
    user-select: none;
    transform: skew(-12deg)
}

.floating-menu ul {
    position: relative;
    list-style: none;
    text-align: center;
    margin: 3rem 0;
}

.floating-menu ul li {
    position: relative;
}

.floating-menu ul li:not(:last-child) {
    margin-bottom: 3rem;
}

.floating-menu ul li .tooltip {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    text-align: center;
    background-color: #5294e2;
    padding: 5px 16px;
    border-radius: 20px;
    left: -20%;
    transform: translate(-50%, 10%);
}

.floating-menu ul li .tooltip:after {
    content: '';
    position: absolute;
    top: 50%;
    border-top: solid 10px #5294e2;
    border-left: solid 10px transparent;
    border-right: solid 10px transparent;
    -webkit-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg) translate(25%, 70%);
}

.floating-menu ul li a {
    color: #FFF;
    opacity: .7;
    cursor: pointer;
    transition: opacity 200ms;
}

.floating-menu ul li:hover .tooltip {
    visibility: visible;
    opacity: 1;
}

.floating-menu ul li a:hover {
    opacity: 1;
}

.floating-menu ul li.disabled a {
    opacity: .47;
    cursor: default;
}

.floating-menu ul li.active a {
    opacity: 1;
}

.floating-menu ul li a svg {
    width: 38px;
    height: 38px;
}

.logo {
    font-family: 'Titillium Web', sans-serif;
    font-weight: 900;
    font-size: 5em;
}

